MODIFICACION DE PARRAFO

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<h1>hola</h1>
+<h1>prueba</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos molestiae illum qui asperiores similique deleniti ipsa saepe quaerat, ullam cum sed recusandae aliquid deserunt possimus. Facilis consectetur dolores cupiditate sit?</p>
